--- a/style.css
+++ b/style.css
@@ -258,6 +258,26 @@ body {
   .fotos-equipe img {
     width: 90%;
     height: auto;
+    .navbar .container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .menu {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    margin-top: 10px;
+  }
+
+  .menu li a {
+    font-size: 1rem;
+  }
+
+  .logo {
+    margin-bottom: 10px;
+  }
+}
   }
 
   .depoimentos-sobre {
