--- a/style.css
+++ b/style.css
@@ -585,3 +585,17 @@ body {
 .card-animal:nth-child(7) { animation-delay: 0.8s; }
 .card-animal:nth-child(8) { animation-delay: 0.9s; }
 .card-animal:nth-child(9) { animation-delay: 1s; }
+
+@media (max-width: 600px) {
+  .navbar .container {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .menu {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+}
